eks_infrastructure/vpc/vpc.tf
resource "aws_vpc" "my_vpc" {
  cidr_block = var.vpc_cidr_block

  # Kubernates specific requirements
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.vpc_name}-${var.env}-VPC"
  }
}
